# CodeMachine-CLI

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  TELEMETRY_MIGRATION_PHASE_PLAN.md  assistant.js  bunfig.toml  docs.json  drizzle.config.ts  package.json  pyproject.toml  tsconfig.json
.claude/workflows/: recording-pipeline-script-to-synced-video.md  video-assets-from-script.md  video-assets-orchestration-from-script.md
.github/workflows/: build-binaries.yml  publish.yml
apps/remotion/: package.json
asciis/: README.md
assistant/: components.js  config.js  demo-data.js  events.js  highlight.js  icons.js  index.js  messages.js  styles.js
build-workflows/: advanced-workflows.mdx  build-agents.mdx  import-workflows.mdx  model-configuration.mdx  package-structure.mdx  publish-workflow.mdx  runtime-state.mdx  workflow-examples.mdx  workflow-structure.mdx  write-prompts.mdx  your-first-workflow.mdx
config/: agent-characters.json  main.agents.js  modules.js  placeholders.js  sub.agents.js
core-concepts/: agent-basics.mdx  agent.mdx  components.mdx  how-code-machine-works.mdx  patterns.mdx  test.mdx  the-model.mdx  what-is-codemachine.mdx
core-concepts/workflow/: basics.mdx  controls.mdx  definition.mdx  orchestration-patterns.mdx  patterns.mdx  ressss.mdx
dev/: sitemap.xml
docker/observability/: README.md  docker-compose.yml  grafana-dashboards.yaml  grafana-datasources.yaml  otel-collector.yaml  prometheus.yml  tempo.yaml
docs/: API.md  MIGRATION.md  REWRITE_PROGRESS.md  TECHNICAL_ARCHITECTURE.md  customizing-workflows.md  narrator.md  overview.md
docs/case-studies/: sustaina.md
getting-started/: overview.mdx  quickstart.mdx  untitled-page.mdx
reference/: cli-reference.mdx  interactive-mode.mdx
resources/: advanced-setup.mdx  data-usage.mdx  engine-compliance.mdx  faq.mdx  license.mdx  mcp.mdx  third-party.mdx  workflow-library.mdx
scripts/: build-binaries.mjs  build.ts  import-telemetry.ts  publish.ts
(+967 files in other folders)
