[project]
name = "codemachine-cli"
version = "0.8.0"
description = "Autonomous multi-agent orchestration platform for turning specifications into production-ready code"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["ai", "agents", "orchestration", "code-generation", "automation", "cli"]
license = {text = "MIT"}
authors = [
    {name = "CodeMachine Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/codemachine/codemachine"
Documentation = "https://docs.codemachine.co"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = []

[dependency-groups]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings>=0.30.1",
    "mkdocstrings-typescript>=0.1.0",
    "mike>=2.0.0",
]
