[project]
name = "codemachine-cli"
version = "0.8.0"
description = "Autonomous multi-agent orchestration platform for turning specifications into production-ready code"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["ai", "agents", "orchestration", "code-generation", "automation", "cli"]
license = {text = "MIT"}
authors = [
    {name = "CodeMachine Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/codemachine/codemachine"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = []

